Solved Dark Mode + Added Image and Touchups

--- a/src/index.css
+++ b/src/index.css
@@ -2,9 +2,6 @@
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-
-  color-scheme: light dark;
-  background-color: #242424;
   height:100%;
   margin-left:0;
   margin-top:100%;
@@ -30,6 +27,7 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  overflow:hidden;
 }
 
 h1 {
@@ -44,7 +42,6 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
 }
@@ -56,7 +53,7 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-@media (prefers-color-scheme: light) {
+
   :root {
     color: #213547;
     background-color: #ffffff;
@@ -68,7 +65,7 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
-}
+
 
 .navbar {
   position: fixed; /* stays in place */
@@ -235,11 +232,18 @@ border-radius: 5px;
 }
 
 .Hola{
-  margin-bottom:5%;
+  margin-top:10%;
+  margin-bottom:3%;
   color:white;
   text-align:left;
 }
 
+.Gracias{
+  margin-top:20%;
+  margin-bottom:3%;
+  color:white;
+  text-align:left;
+}
 table{
   margin-bottom:15%;
   border-radius:10;
@@ -254,6 +258,38 @@ td, th{
   border-color:white;
   background-color:#808080;
   border-radius:10;
+}
+
+@media only screen and (min-width: 733px) {
+  
+}
+
+.ConfirmationNumber{
+  float:left;
+  color:white;
+  position:absolute;
+}
+
+.EresMas{
+  margin-left:105%;
+  margin-top:-10%;
+  border-radius:10px;
+}
+
+.Casa{
+  float:left;
+  margin-top:10%;
+  position:absolute;
+  width:40%;
+}
+
+.Comprar{
+  margin-right:10%;
+  width:20vw;
+}
+
+.ReturnoCasa{
+  width:20vw;
 }
 
 
